2003-08-08	ujwal

    * Fixed a bug that caused sessions launched from applescript in a 
      new window not honor the row, column, and font settings.
      
    * Created [PseudoTerminal initViewWithFrame] that creates a terminal view that should 
      be embeddable in a non-iTerm window. Refactored window initialization 
      code in the process so that an iTerm window does not have to be created 
      before a terminal view can be created.

    * Moved all the header files into Headers/iTerm. Easier to build a framework.
    
    * Made images loadable from bundle.

2003-08-06	ujwal
    
    * Removed all references to [NSApp delegate].
    
    * Renamed MainMenu class to iTermController.

2003-08-03	ujwal

    * Using an autorelease pool in screen update thread.


2003-08-01	ujwal

    * Added Michael Johnston's patch to access text storage of session via 
      Applescript.

2003-07-21	fabian
    * Fixed a bug that messes up deadkey input with alternative OPTION key options.
    
2003-07-21	ujwal

    * Checked in new icons and images.

2003-07-20	ujwal

    * Put back in bold face support for fonts that support it.

2003-07-18	ujwal

    * Re-implemented eraseInDisplay code to save screen contents to scrollback buffer. 
      Fixed a bug in VT100Typesetter in the process.
      
    * During scrollUp, lines at the top are moved into the scrollback buffer.

2003-07-17	ujwal

    * Disabled code in eraseDisplay where contents were saved in the scrollback buffer 
      since it was not right. Needs more thought and work.

2003-07-16	ujwal

    * Added support for ANSI 16 color sequences.
    
    * Added support for alternate screen buffer mode.
    
    * When display is erased, contents are stored in scrollback buffer.

2003-07-09	ujwal

    * Made a change in PTYSession: insertText to always use dataUsingEncoding.

2003-06-27	ujwal

    * Version number is 0.7.6

2003-06-26	ujwal

    * Put in a "Default Sessions" button in the preferences pane 